# mcp-liuren

./: README.md  liuren_core.py  pyproject.toml  requirements.txt  server.py
examples/: generate-example.py
skill/: liuren.skill.md
