[project]
name = "mcp-liuren"
version = "1.0.0"
description = "Da Liu Ren (大六壬) MCP server — three transmissions / four lessons / heaven-earth plate over stdio."
keywords = ["mcp", "model-context-protocol", "hermes-agent", "claude", "vibe-coding", "korean", "telegram", "fortune-telling", "liuren", "divination"]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.2",
    "kinliuren>=0.1.2.9",
    "lunar_python>=1.4.8",
    "pillow>=10.0",
]

[project.scripts]
mcp-liuren = "server:main"

[tool.setuptools]
py-modules = ["server", "liuren_core"]
